--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "vue-server": "^0.4.0-beta.5"
+    "vue-server": "0.4.0-beta.5"
   }
 }
